# Oreon-system-manager-QT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  oreon-system-manager  oreon-system-manager-1.0.0  qrc_resources.cpp
.qt/: QtDeploySupport.cmake
oreon-system-manager_autogen/: mocs_compilation.cpp
oreon-system-manager_autogen/UVLADIE3JM/: moc_audiomanager.cpp  moc_audiomanager.cpp.d  moc_containermanager.cpp  moc_containermanager.cpp.d  moc_drivermanager.cpp  moc_drivermanager.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_packagemanager.cpp  moc_packagemanager.cpp.d  moc_privilegedexecutor.cpp  moc_privilegedexecutor.cpp.d  moc_repositorymanager.cpp  moc_repositorymanager.cpp.d  moc_systemutils.cpp  moc_systemutils.cpp.d
resources/: oreon-system-manager.desktop  resources.qrc
src/: audiomanager.cpp  audiomanager.h  containermanager.cpp  containermanager.h  drivermanager.cpp  drivermanager.h  main.cpp  mainwindow.cpp  mainwindow.h  packagemanager.cpp  packagemanager.h  privilegedexecutor.cpp  privilegedexecutor.h  repositorymanager.cpp  repositorymanager.h  systemutils.cpp  systemutils.h
ui/: mainwindow.ui
